# Matrix

./: .gitignore  README.md  big_o_test.cpp
.github/workflows/: c-cpp.yml  ci.yml
complete_project/: meson.build
complete_project/include/: Matrix.hpp  Vector.hpp  meson.build
complete_project/src/: eval_tests.cpp  meson.build
complete_project/subprojects/Catch2-3.4.0/: .meson-subproject-wrap-hash.txt
complete_project/tests/: matrix_vec.cpp  meson.build  tests.hpp
ex00/: Matrix.hpp  Vector.hpp  a.out  ex00.cpp  ex00.hpp  test.sh  vector.hpp
ex01/: Matrix.hpp  Vector.hpp  ex01.cpp  test.sh
ex02/: amv_math.hpp  ex02.cpp  test.sh
ex03/: Vector.hpp  ex03.cpp  test.sh
ex04/: Vector.hpp  ex04.cpp  test.sh
ex05/: Vector.hpp  amv_math.hpp  ex05.cpp  test.sh
ex06/: ex06.cpp  test.sh
ex07/: Matrix.hpp  Vector.hpp  ex07.cpp  test.sh
ex08/: Matrix.hpp  ex08.cpp
ex09/: Matrix.hpp  ex09.cpp
ex10/: Matrix.hpp  ex10.cpp
ex11/: Matrix.hpp  Vector.hpp  ex11.cpp  test_run.cpp
ex12/: Matrix.hpp  ex12.cpp
ex13/: Matrix.hpp  ex13.cpp
mat_vec/: meson.build
mat_vec/include/: Matrix.hpp  Vector.hpp
mat_vec/src/: eval_tests.cpp  meson.build
mat_vec/subprojects/: catch2.wrap
mat_vec/subprojects/Catch2-3.5.0/: .meson-subproject-wrap-hash.txt
mat_vec/tests/: matrix_vec.cpp  tests.hpp
